# AI-note-community

./: .env.example  .gitignore  README.md  docker-compose.yml  install.sh
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  github_feedback.py  main.py  security.py  store.py  synology_integration.py
backend/app/api/: __init__.py
backend/app/services/: nsx_parser.py
backend/app/synology_gateway/: client.py  notestation.py
backend/tests/: conftest.py  test_community_shell.py
docs/: BOOTSTRAP_STATUS.md  EXTRACTION_MATRIX.md  SCOPE.md
frontend/: Dockerfile  README.md  index.html  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminRoute.tsx  ErrorBoundary.tsx  Layout.tsx  LoadingSpinner.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useFeedback.ts  useGlobalGraph.ts  useMembers.ts  useNote.ts  useNotebooks.ts  useNotes.ts  useSearch.ts  useSearchIndex.ts  useSetup.ts  useSnapshots.ts  useSynology.ts
frontend/src/lib/: api.ts  snapshot-api.ts
frontend/src/pages/: Feedback.tsx  Graph.tsx  Login.tsx  Members.tsx  Notes.tsx  Search.tsx  Settings.tsx  Setup.tsx  Signup.tsx
frontend/src/types/: feedback.ts  note.ts  snapshot.ts  synology.ts
scripts/: extract_from_labnote_ai.py
